--- a/templates/json.html
+++ b/templates/json.html
@@ -18,9 +18,22 @@
     {% include '_navbar.html' %}
     <div class="container mt-3">
         <h3>JSON 練習</h3>
-        <div id="userList">
+        <table id="userList">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>姓名</th>
+                    <th>電子郵件</th>
+                    <th>年紀</th>
+                </tr>
+            </thead>
+            <tbody>
 
-        </div>
+            </tbody>
+        </table>
+        <ul id="ul1">
+
+        </ul>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
@@ -34,8 +47,38 @@
 
             //如何讀取 users JSON 中的資料
             //如何將讀出的資料顯示在網頁上
+            // for (let i = 0; i < users.length; i++) {
+            //     console.log(users[i])
+            // };
 
+            let lis = '';
+            const tb = document.querySelector('#userList>tbody');
+            let tds = '';
+            users.forEach((user, index, array) => {
+                // console.log(user);
+                // console.log(user.UserName);
+                // console.log(user.UserEmail);
+                // console.log(user.age);
 
+                // lis += `<li>${user.UserName}</li>`
+
+                // let lis2 = document.createElement('li');
+                // lis2.innerHTML = user.UserName;
+                // document.getElementById('ul1').appendChild(lis2);
+
+                const { id, UserName, UserEmail, age } = user;
+                tds += `
+                <tr>
+                    <td>${id}</td>
+                    <td>${UserName}</td>
+                    <td>${UserEmail}</td>
+                    <td>${age}</td>
+                </tr>
+                `;
+            });
+            // document.getElementById('ul1').innerHTML = lis;
+            tb.innerHTML = tds;
+            // tb.setAttribute("style", 'border: black solid 1px');
 
         </script>
 </body>
