--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,11 @@
         <div class="container mt-5">
             <!-- <div class="row justify-content-center"> -->
             <button id="buttonStart" class="btn btn-primary">Ajax 開始</button>
-            <button id="buttonStart" class="btn btn-primary">Ajax 結束</button>
+            <button id="buttonEnd" class="btn btn-primary">Ajax 結束</button>
             <img id="img1" src="static/images/Loading.gif" style="display: none;" alt="載入中..." />
 
 
-            <div id="divInfo" class="alert mt-5"></div>
+            <div id="divInfo" class="alert alert-info mt-5"></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -34,17 +34,100 @@
         const divInfo = document.querySelector('#divInfo');
         const imgLoader = document.querySelector('#img1');
         const btnStart = document.querySelector('#buttonStart');
+        const btnEnd = document.querySelector('#buttonEnd')
 
-        const promise = new Promise((resolve, reject) => {
-            if (true) {
-                resolve('成功')
-            } else {
-                reject('失敗')
+        let abortController = null;
+
+        btnStart.addEventListener('click', async () => {
+            const apiUrl = 'http://127.0.0.1:5000/api/hello';
+            abortController = new AbortController();
+            const signal = abortController.signal;
+
+            // 10秒沒有回傳，就終止fetch
+            const timer = setTimeout(() => {
+                abortController.abort('api執行逾時');
+            }, 10000);
+
+            try {
+                // 載入圖示gif
+                imgLoader.style.display = 'inline';
+                btnStart.disabled = true;
+
+                // async await
+                // const response = await fetch(apiUrl);
+                const response = await fetch(apiUrl, { signal });
+                if (!response.ok) throw new Error("有錯誤，無法取得資料");
+                const data = await response.json();
+                divInfo.innerHTML = `<h2>${data.message}</h2>`;
+
+                // if (response.ok) {
+                //     const contentType = response.headers.get('Content-Type');
+                //     if (contentType && contentType.includes('application/json')) {
+                //         const data = await response.json();
+                //         divInfo.innerHTML = `<h2>${data.message}</h2>`;
+                //         // console.log('status:', response.status);
+                //     } else {
+                //         console.log('回傳資料格式不正確')
+                //     }
+                // } else {
+                //     if (response.status >= 500) {
+                //         console.log("伺服器錯誤")
+                //     } else if (response.status >= 400) {
+                //         console.log("呼叫錯誤")
+                //     } else {
+                //         console.log("請聯絡客服")
+                //     }
+                //     console.log('status:', response.status);
+                // }
+            } catch (error) {
+                if (signal.aborted) { //true 表示取消了
+                    divInfo.textContent = error;
+                } else {
+                    divInfo.textContent = error.message;
+                    // divInfo.textContent = error.message;
+                }
+            } finally {
+                console.log("請求結束")
+                imgLoader.style.display = 'none';
+                btnStart.disabled = false;
+                clearTimeout(timer); //清除計時器
+            }
+
+            // promise
+            // console.log(fetch(apiUrl));
+            // fetch(apiUrl)
+            //     .then(res => {
+            //         // console.log(res);
+            //         // console.log(res.headers.get('Content-Type'));
+            //         // console.log(res.headers.get('Content-Length'));
+            //         // console.log(res.ok);
+            //         // console.log(res.status);
+            //         // console.log(res.body);
+            //         // console.log(res.json()); //讀取body中json格式資料
+            //         return res.json()
+            //     }).then(data => {
+            //         divInfo.textContent = data.message;
+            //     })
+        });
+
+        // Ajax 結束 按鈕
+        btnEnd.addEventListener('click', () => {
+            if (abortController) {
+                abortController.abort('你停止api執行');
             }
         });
-        promise.then(data => console.log(data))
-            .catch(error => console.log(error))
-            .finally(() => console.log('end'))
+
+        // practice
+        // const promise = new Promise((resolve, reject) => {
+        //     if (true) {
+        //         resolve('成功')
+        //     } else {
+        //         reject('失敗')
+        //     }
+        // });
+        // promise.then(data => console.log(data))
+        //     .catch(error => console.log(error))
+        //     .finally(() => console.log('end'))
 
     </script>
 </body>
