--- a/templates/response_body.html
+++ b/templates/response_body.html
@@ -36,6 +36,11 @@
                 JSON處理
             </h3>
             <button id="buttonJson" class="btn btn-primary">讀取JSON</button>
+            <select name="" id="selectTask">
+                <!-- <option value="id">Task1</option>
+                <option value="id">Task2</option>
+                <option value="id">Task3</option> -->
+            </select>
             <div class="mt-3">
                 <img id="img1" class="img-fluid rounded border shadow-sm" style="width: 300px; height: auto;"
                     src="static/images/empty.png" />
@@ -56,27 +61,83 @@
         const btnJson = document.querySelector('#buttonJson');
         const divInfo = document.querySelector('#divInfo');
         const theImg = document.querySelector('#img1');
+        const selTask = document.querySelector('#selectTask');
 
-
+        // 呼叫回傳文字的api
         btnText.addEventListener('click', async () => {
+            const apiUrl = 'http://127.0.0.1:5000/api/text';
+            try {
+                const response = await fetch(apiUrl);
+                if (!response.ok) throw new Error('有錯');
 
+                console.log(response.headers.get('Content-Type'));
+
+                const data = await response.text();
+                divInfo.textContent = data;
+            } catch (error) {
+                divInfo.textContent = error.message;
+            } finally {
+
+            }
         });
 
-
+        // 呼叫回傳圖片的api
         btnLoad.addEventListener('click', async () => {
+            const apiUrl = 'http://127.0.0.1:5000/api/image';
+            try {
+                const response = await fetch(apiUrl);
+                if (!response.ok) throw new Error('有錯');
+                const datas = await response.blob();
+                theImg.src = URL.createObjectURL(datas);
+            } catch (error) {
+                divInfo.textContent = error.message;
+            } finally {
 
-        })
-
-
-        btnJson.addEventListener('click', async () => {
+            }
 
         });
-
-
         theImg.onload = () => {
             // 當圖片真的出現在畫面上後，這個暫存網址就可以作廢了，節省記憶體
             URL.revokeObjectURL(theImg.src);
         };
+
+
+        // 呼叫回傳json的api
+        btnJson.addEventListener('click', async () => {
+            const apiUrl = 'http://127.0.0.1:5000/api/json';
+            try {
+                const response = await fetch(apiUrl);
+                if (!response.ok) throw new Error('有錯');
+                const datas = await response.json();
+                let opts = '';
+                datas.forEach(todo => {
+                    opts += `<option value="${todo.id}">${todo.task}</option>`
+                });
+                selTask.innerHTML = opts;
+
+                // for (let o = 0; o < datas.length; o++) {
+                //     let opt = document.createElement('option');
+                //     opt.setAttribute('value', datas[o].id);
+                //     opt.textContent = datas[o].task;
+                //     selTask.appendChild(opt);
+                // }
+
+                divInfo.textContent = JSON.stringify(datas);
+
+            } catch (error) {
+                divInfo.textContent = error.message;
+            } finally {
+
+            }
+        });
+
+        selTask.addEventListener('change', () => {
+            // const idx = selTask.selectedIndex;
+            // console.log(selTask.options[idx].text);
+            // console.log(selTask.options[idx].value); //"${todo.id}" is 1, 2, 3...
+            console.log(selTask.value); //讀value簡化 "${todo.id}" is 1, 2, 3...
+        })
+
 
 
     </script>
